src/test/ui/const-generics/issues/issue-62878.stderr
error[E0770]: the type of const parameters must not depend on other generic parameters
  --> $DIR/issue-62878.rs:5:38
   |
LL | fn foo<const N: usize, const A: [u8; N]>() {}
   |                                      ^ the type must not depend on the parameter `N`

error[E0658]: const generics are unstable
  --> $DIR/issue-62878.rs:5:14
   |
LL | fn foo<const N: usize, const A: [u8; N]>() {}
   |              ^
   |
   = note: see issue #74878 <https://github.com/rust-lang/rust/issues/74878> for more information
   = help: add `#![feature(min_const_generics)]` to the crate attributes to enable

error[E0658]: const generics are unstable
  --> $DIR/issue-62878.rs:5:30
   |
LL | fn foo<const N: usize, const A: [u8; N]>() {}
   |                              ^
   |
   = note: see issue #74878 <https://github.com/rust-lang/rust/issues/74878> for more information
   = help: add `#![feature(min_const_generics)]` to the crate attributes to enable

error[E0107]: wrong number of const arguments: expected 2, found 1
  --> $DIR/issue-62878.rs:11:5
   |
LL |     foo::<_, {[1]}>();
   |     ^^^^^^^^^^^^^^^ expected 2 const arguments

error[E0107]: wrong number of type arguments: expected 0, found 1
  --> $DIR/issue-62878.rs:11:11
   |
LL |     foo::<_, {[1]}>();
   |           ^ unexpected type argument

error[E0308]: mismatched types
  --> $DIR/issue-62878.rs:11:15
   |
LL |     foo::<_, {[1]}>();
   |               ^^^ expected `usize`, found array `[{integer}; 1]`

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0107, E0308, E0658, E0770.
For more information about an error, try `rustc --explain E0107`.
